--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^2.2.1",
     "@astrojs/rss": "^2.4.3",
+    "@astrojs/tailwind": "^4.0.0",
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "@tailwindcss/typography": "^0.5.9",
     "astro": "^2.6.4",
+    "dayjs": "^1.11.8",
+    "node-html-parser": "^6.1.5",
     "react": "^18.2.0",
     "tailwind": "^4.0.0"
   },
